<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wearable Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ahow_map">Show Map</string>
    <string name="notification_text">Text of this Notification</string>
    <string name="notification_title">Test Notification</string>
    <string name="notification_action_title">Test Actions Notification</string>
    <string name="send_mail">Send mail</string>

    <string name="reply_label">Reply</string>
    <string name="notification">Notification</string>
    <string name="notification_big">Big Notification</string>
    <string name="notification_action">Notification with action</string>
    <string name="notification_page">Notification with page</string>
    <string name="notification_voice">Notification with voice</string>
    <string name="send_data">Send Data</string>
    <string name="notification_title_page_1">Page 1</string>
    <string name="a_lot_of_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="notification_title_page2">Page 2</string>
    <string name="notification_reply_title">Notification with reply</string>
    <string name="notification_reply_text">This is notification with reply</string>

    <string-array name="reply_choices">
        <item>Yes</item>
        <item>No</item>
        <item>Maybe</item>
    </string-array>

</resources>
